Add documentation to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,16 @@
 *
+
+# Setup on a new machine:
+
+# git clone git@github.com:JonathanArns/.dotfiles.git ~/.dotfiles
+# alias dotfiles='git --git-dir ~/.dotfiles/.git --work-tree=$HOME'
+# dotfiles reset --hard
+
+# Please note that any files that exist in your home directory will be overwritten by the files from this repository if present.
+
+
+# Add things with the -f option:
+
+# dotfiles add -f .bashrc
+# dotfiles commit -m "Add .bashrc"
+# dotfiles push
