make tilix borderless

--- a/.dconf.ini
+++ b/.dconf.ini
@@ -9,12 +9,15 @@ window-width=540
 [com/gexperts/Tilix]
 enable-wide-handle=false
 middle-click-close=false
+prompt-on-close=false
+prompt-on-delete-profile=true
 tab-position='top'
 terminal-title-show-when-single=false
 terminal-title-style='small'
 theme-variant='system'
 use-overlay-scrollbar=true
-window-style='normal'
+use-tabs=false
+window-style='borderless'
 
 [com/gexperts/Tilix/profiles]
 default='5a2bbdf4-29b8-46f5-840d-c5a51bd1483b'
@@ -90,7 +93,12 @@ subtitle-encoding='UTF-8'
 
 [org/gnome/Weather]
 automatic-location=true
-locations=[<(uint32 2, <('Washington', 'KDCA', true, [(0.67803131976116615, -1.3444998506811625)], [(0.67884776733195662, -1.344538230471414)])>)>, <(uint32 2, <('Paderborn', 'EDLP', true, [(0.90088078805550398, 0.15038920969794223)], [(0.9026261173074982, 0.15300720357593373)])>)>]
+locations=[<(uint32 2, <('College Park, Maryland, United States of America', '', false, [(0.68034096632020791, -1.3428025511448538)], [(0.67884776733195662, -1.344538230471414)])>)>, <(uint32 2, <('Washington', 'KDCA', false, [(0.67803131976116615, -1.3444998506811625)], [(0.67803131976116615, -1.3444998506811625)])>)>, <(uint32 2, <('Paderborn', 'EDLP', true, [(0.90088078805550398, 0.15038920969794223)], [(0.9026261173074982, 0.15300720357593373)])>)>]
+
+[org/gnome/baobab/ui]
+active-chart='rings'
+window-size=(960, 600)
+window-state=87168
 
 [org/gnome/cheese]
 burst-delay=1000
@@ -109,7 +117,7 @@ size=(870, 690)
 state=87168
 
 [org/gnome/control-center]
-last-panel='keyboard'
+last-panel='wifi'
 
 [org/gnome/desktop/a11y/applications]
 screen-magnifier-enabled=false
@@ -140,7 +148,7 @@ show-weekdate=false
 current=uint32 0
 mru-sources=[('xkb', 'us'), ('xkb', 'de')]
 sources=[('xkb', 'us'), ('xkb', 'de')]
-xkb-options=@as []
+xkb-options=['lv3:ralt_switch']
 
 [org/gnome/desktop/interface]
 clock-show-seconds=false
@@ -155,10 +163,14 @@ text-scaling-factor=1.0
 toolkit-accessibility=false
 
 [org/gnome/desktop/notifications]
-application-children=['org-gnome-software', 'org-gnome-terminal', 'google-chrome', 'org-freedesktop-problems-applet', 'gnome-power-panel', 'com-gexperts-tilix']
+application-children=['org-gnome-software', 'org-gnome-terminal', 'google-chrome', 'org-freedesktop-problems-applet', 'gnome-power-panel', 'com-gexperts-tilix', 'slack-slack', 'org-gnome-gedit', 'gnome-network-panel', 'org-gnome-baobab']
+show-banners=true
 
 [org/gnome/desktop/notifications/application/com-gexperts-tilix]
 application-id='com.gexperts.Tilix.desktop'
+
+[org/gnome/desktop/notifications/application/gnome-network-panel]
+application-id='gnome-network-panel.desktop'
 
 [org/gnome/desktop/notifications/application/gnome-power-panel]
 application-id='gnome-power-panel.desktop'
@@ -169,11 +181,20 @@ application-id='google-chrome.desktop'
 [org/gnome/desktop/notifications/application/org-freedesktop-problems-applet]
 application-id='org.freedesktop.problems.applet.desktop'
 
+[org/gnome/desktop/notifications/application/org-gnome-baobab]
+application-id='org.gnome.baobab.desktop'
+
+[org/gnome/desktop/notifications/application/org-gnome-gedit]
+application-id='org.gnome.gedit.desktop'
+
 [org/gnome/desktop/notifications/application/org-gnome-software]
 application-id='org.gnome.Software.desktop'
 
 [org/gnome/desktop/notifications/application/org-gnome-terminal]
 application-id='org.gnome.Terminal.desktop'
+
+[org/gnome/desktop/notifications/application/slack-slack]
+application-id='slack_slack.desktop'
 
 [org/gnome/desktop/peripherals/touchpad]
 two-finger-scrolling-enabled=true
@@ -213,13 +234,40 @@ unmaximize=['<Alt><Super>j']
 button-layout='appmenu:minimize,maximize,close'
 resize-with-right-button=true
 
+[org/gnome/eog/ui]
+sidebar=false
+
 [org/gnome/eog/view]
 background-color='rgb(0,0,0)'
 use-background-color=true
 
+[org/gnome/evince]
+document-directory=@ms nothing
+
+[org/gnome/evince/default]
+window-ratio=(1.5686274509803921, 1.2325029655990509)
+
 [org/gnome/evolution-data-server]
 migrated=true
 network-monitor-gio-name=''
+
+[org/gnome/file-roller/dialogs/add]
+current-folder='file:///home/jonathan/Downloads'
+exclude-files=''
+exclude-folders=''
+include-files='*'
+no-symlinks=true
+selected-files=@as []
+update=false
+
+[org/gnome/file-roller/dialogs/extract]
+recreate-folders=true
+skip-newer=false
+
+[org/gnome/file-roller/file-selector]
+show-hidden=false
+sidebar-size=168
+window-size=(840, 769)
 
 [org/gnome/file-roller/listing]
 list-mode='as-folder'
@@ -239,7 +287,7 @@ active-plugins=['spell', 'filebrowser', 'time', 'docinfo', 'modelines']
 [org/gnome/gedit/plugins/filebrowser]
 root='file:///'
 tree-view=true
-virtual-root='file:///home/jonathan/.brain/modules/test_hdf5'
+virtual-root='file:///home/jonathan/.brain/modules/s2p_spike_deconv'
 
 [org/gnome/gedit/preferences/editor]
 auto-indent=true
@@ -259,7 +307,7 @@ bottom-panel-size=140
 side-panel-active-page='GeditWindowDocumentsPanel'
 side-panel-size=200
 size=(1920, 1012)
-state=43908
+state=43780
 
 [org/gnome/login-screen]
 enable-fingerprint-authentication=true
@@ -288,7 +336,7 @@ ignore-ca-cert=false
 ignore-phase2-ca-cert=false
 
 [org/gnome/settings-daemon/plugins/color]
-night-light-last-coordinates=(39.03339506011519, -76.925724500000001)
+night-light-last-coordinates=(39.006420319942407, -76.925629200000003)
 
 [org/gnome/settings-daemon/plugins/media-keys]
 custom-keybindings=['/org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom0/', '/org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom1/']
@@ -314,7 +362,7 @@ hinting='slight'
 [org/gnome/shell]
 app-picker-view=uint32 1
 enabled-extensions=['dash-to-dock@micxgx.gmail.com']
-favorite-apps=['firefox.desktop', 'google-chrome.desktop', 'org.gnome.Nautilus.desktop', 'com.gexperts.Tilix.desktop', 'code_code.desktop']
+favorite-apps=['firefox.desktop', 'google-chrome.desktop', 'org.gnome.Nautilus.desktop', 'com.gexperts.Tilix.desktop', 'code_code.desktop', 'slack_slack.desktop']
 
 [org/gnome/shell/app-switcher]
 current-workspace-only=true
@@ -327,16 +375,17 @@ transparency-mode='DYNAMIC'
 
 [org/gnome/shell/weather]
 automatic-location=true
-locations=[<(uint32 2, <('Washington', 'KDCA', true, [(0.67803131976116615, -1.3444998506811625)], [(0.67884776733195662, -1.344538230471414)])>)>, <(uint32 2, <('Paderborn', 'EDLP', true, [(0.90088078805550398, 0.15038920969794223)], [(0.9026261173074982, 0.15300720357593373)])>)>]
+locations=[<(uint32 2, <('College Park, Maryland, United States of America', '', false, [(0.68034096632020791, -1.3428025511448538)], [(0.67884776733195662, -1.344538230471414)])>)>, <(uint32 2, <('Washington', 'KDCA', false, [(0.67803131976116615, -1.3444998506811625)], [(0.67803131976116615, -1.3444998506811625)])>)>, <(uint32 2, <('Paderborn', 'EDLP', true, [(0.90088078805550398, 0.15038920969794223)], [(0.9026261173074982, 0.15300720357593373)])>)>]
 
 [org/gnome/shell/world-clocks]
 locations=[<(uint32 2, <('Berlin', 'EDDT', true, [(0.91746141594945008, 0.23241968454167572)], [(0.91658875132345297, 0.23387411976724018)])>)>]
 
 [org/gnome/software]
-check-timestamp=int64 1586439142
+check-timestamp=int64 1597142404
 first-run=false
-install-timestamp=int64 1586105600
-online-updates-timestamp=int64 1586439147
+install-timestamp=int64 1596760080
+online-updates-timestamp=int64 1597142408
+upgrade-notification-timestamp=int64 1588242979
 
 [org/gnome/system/location]
 enabled=true
@@ -367,9 +416,9 @@ show-hidden=true
 show-size-column=true
 show-type-column=true
 sidebar-width=158
-sort-column='name'
+sort-column='modified'
 sort-directories-first=false
-sort-order='ascending'
+sort-order='descending'
 type-format='category'
 window-position=(26, 23)
 window-size=(1231, 902)
