configure for gnome 40

--- a/.dconf.ini
+++ b/.dconf.ini
@@ -1,10 +1,10 @@
 [ca/desrt/dconf-editor]
-saved-pathbar-path='/org/gnome/desktop/app-folders/folders/Utilities/'
-saved-view='/org/gnome/desktop/app-folders/'
+saved-pathbar-path='/org/gnome/desktop/wm/keybindings/maximize'
+saved-view='/org/gnome/desktop/wm/keybindings/'
 show-warning=false
-window-height=499
+window-height=853
 window-is-maximized=false
-window-width=540
+window-width=899
 
 [com/gexperts/Tilix]
 enable-wide-handle=false
@@ -13,8 +13,8 @@ prompt-on-close=false
 prompt-on-delete-profile=true
 tab-position='top'
 terminal-title-show-when-single=false
-terminal-title-style='small'
-theme-variant='system'
+terminal-title-style='none'
+theme-variant='dark'
 use-overlay-scrollbar=true
 use-tabs=false
 window-style='borderless'
@@ -84,6 +84,19 @@ use-system-font=false
 use-theme-colors=true
 visible-name='Basic'
 
+[com/github/amikha1lov/recapp]
+format-video='mp4'
+high-quality-switch=false
+path-to-save-video-folder='/home/jonathan/Videos'
+record-audio-switch=true
+record-mouse-cursor-switch=true
+
+[org/blueman/general]
+window-properties=[606, 350, 26, 23]
+
+[org/blueman/plugins/powermanager]
+auto-power-on=@mb true
+
 [org/gnome/GWeather]
 temperature-unit='centigrade'
 
@@ -109,7 +122,7 @@ video-x-resolution=960
 video-y-resolution=540
 
 [org/gnome/clocks]
-world-clocks=[{'location': <(uint32 2, <('Berlin', 'EDDT', true, [(0.91746141594945008, 0.23241968454167572)], [(0.91658875132345297, 0.23387411976724018)])>)>}]
+world-clocks=@aa{sv} []
 
 [org/gnome/clocks/state/window]
 panel-id='world'
@@ -117,7 +130,7 @@ size=(870, 690)
 state=87168
 
 [org/gnome/control-center]
-last-panel='wifi'
+last-panel='keyboard'
 
 [org/gnome/desktop/a11y/applications]
 screen-magnifier-enabled=false
@@ -125,6 +138,7 @@ screen-reader-enabled=false
 
 [org/gnome/desktop/a11y/magnifier]
 mag-factor=1.0
+mouse-tracking='proportional'
 
 [org/gnome/desktop/app-folders]
 folder-children=['Utilities']
@@ -142,11 +156,15 @@ primary-color='#000000000000'
 secondary-color='#000000000000'
 
 [org/gnome/desktop/calendar]
-show-weekdate=false
+show-weekdate=true
+
+[org/gnome/desktop/datetime]
+automatic-timezone=true
 
 [org/gnome/desktop/input-sources]
 current=uint32 0
 mru-sources=[('xkb', 'us'), ('xkb', 'de')]
+per-window=false
 sources=[('xkb', 'us'), ('xkb', 'de')]
 xkb-options=['lv3:ralt_switch']
 
@@ -155,19 +173,35 @@ clock-show-seconds=false
 clock-show-weekday=false
 cursor-theme='Yaru'
 enable-animations=true
+font-antialiasing='rgba'
+font-hinting='slight'
 gtk-im-module='gtk-im-context-simple'
 gtk-theme='Yaru-dark'
 icon-theme='Yaru'
 show-battery-percentage=true
-text-scaling-factor=1.0
 toolkit-accessibility=false
 
 [org/gnome/desktop/notifications]
-application-children=['org-gnome-software', 'org-gnome-terminal', 'google-chrome', 'org-freedesktop-problems-applet', 'gnome-power-panel', 'com-gexperts-tilix', 'slack-slack', 'org-gnome-gedit', 'gnome-network-panel', 'org-gnome-baobab']
+application-children=['org-gnome-software', 'org-gnome-terminal', 'google-chrome', 'org-freedesktop-problems-applet', 'gnome-power-panel', 'com-gexperts-tilix', 'slack-slack', 'org-gnome-gedit', 'gnome-network-panel', 'org-gnome-baobab', 'code', 'libreoffice-startcenter', 'org-gnome-nautilus', 'gnome-datetime-panel', 'skypeforlinux', 'chromium-browser', 'gnome-control-center', 'intellij-idea-ultimate-intellij-idea-ultimate', 'org-gnome-evince', 'libreoffice-impress', 'com-github-amikha1lov-recapp', 'libreoffice-calc', 'org-gnome-fileroller', 'wireshark']
 show-banners=true
+
+[org/gnome/desktop/notifications/application/chromium-browser]
+application-id='chromium-browser.desktop'
+
+[org/gnome/desktop/notifications/application/code]
+application-id='code.desktop'
 
 [org/gnome/desktop/notifications/application/com-gexperts-tilix]
 application-id='com.gexperts.Tilix.desktop'
+
+[org/gnome/desktop/notifications/application/com-github-amikha1lov-recapp]
+application-id='com.github.amikha1lov.RecApp.desktop'
+
+[org/gnome/desktop/notifications/application/gnome-control-center]
+application-id='gnome-control-center.desktop'
+
+[org/gnome/desktop/notifications/application/gnome-datetime-panel]
+application-id='gnome-datetime-panel.desktop'
 
 [org/gnome/desktop/notifications/application/gnome-network-panel]
 application-id='gnome-network-panel.desktop'
@@ -178,14 +212,35 @@ application-id='gnome-power-panel.desktop'
 [org/gnome/desktop/notifications/application/google-chrome]
 application-id='google-chrome.desktop'
 
+[org/gnome/desktop/notifications/application/intellij-idea-ultimate-intellij-idea-ultimate]
+application-id='intellij-idea-ultimate_intellij-idea-ultimate.desktop'
+
+[org/gnome/desktop/notifications/application/libreoffice-calc]
+application-id='libreoffice-calc.desktop'
+
+[org/gnome/desktop/notifications/application/libreoffice-impress]
+application-id='libreoffice-impress.desktop'
+
+[org/gnome/desktop/notifications/application/libreoffice-startcenter]
+application-id='libreoffice-startcenter.desktop'
+
 [org/gnome/desktop/notifications/application/org-freedesktop-problems-applet]
 application-id='org.freedesktop.problems.applet.desktop'
 
 [org/gnome/desktop/notifications/application/org-gnome-baobab]
 application-id='org.gnome.baobab.desktop'
 
+[org/gnome/desktop/notifications/application/org-gnome-evince]
+application-id='org.gnome.Evince.desktop'
+
+[org/gnome/desktop/notifications/application/org-gnome-fileroller]
+application-id='org.gnome.FileRoller.desktop'
+
 [org/gnome/desktop/notifications/application/org-gnome-gedit]
 application-id='org.gnome.gedit.desktop'
+
+[org/gnome/desktop/notifications/application/org-gnome-nautilus]
+application-id='org.gnome.Nautilus.desktop'
 
 [org/gnome/desktop/notifications/application/org-gnome-software]
 application-id='org.gnome.Software.desktop'
@@ -193,8 +248,17 @@ application-id='org.gnome.Software.desktop'
 [org/gnome/desktop/notifications/application/org-gnome-terminal]
 application-id='org.gnome.Terminal.desktop'
 
+[org/gnome/desktop/notifications/application/skypeforlinux]
+application-id='skypeforlinux.desktop'
+
 [org/gnome/desktop/notifications/application/slack-slack]
 application-id='slack_slack.desktop'
+
+[org/gnome/desktop/notifications/application/wireshark]
+application-id='wireshark.desktop'
+
+[org/gnome/desktop/peripherals/mouse]
+left-handed=false
 
 [org/gnome/desktop/peripherals/touchpad]
 two-finger-scrolling-enabled=true
@@ -220,15 +284,23 @@ allow-volume-above-100-percent=true
 theme-name='Yaru'
 
 [org/gnome/desktop/wm/keybindings]
-cycle-windows=@as []
-cycle-windows-backward=@as []
-maximize=['<Alt><Super>k']
+begin-resize=['<Super>r']
+close=['<Super>q']
+cycle-windows=['<Alt>Tab']
+cycle-windows-backward=['<Shift><Alt>Tab']
+maximize=['<Super>k']
+minimize=@as []
+move-to-workspace-left=['<Alt><Super>comma']
+move-to-workspace-right=['<Alt><Super>period']
+switch-applications=@as []
+switch-applications-backward=@as []
 switch-to-workspace-down=['<Super>j']
+switch-to-workspace-left=['<Super>comma']
+switch-to-workspace-right=['<Super>period']
 switch-to-workspace-up=['<Super>k']
-switch-windows=['<Alt>Escape']
-switch-windows-backward=['<Shift><Alt>Escape']
-toggle-fullscreen=['<Super>f']
-unmaximize=['<Alt><Super>j']
+switch-windows=@as []
+switch-windows-backward=@as []
+unmaximize=['<Super>j']
 
 [org/gnome/desktop/wm/preferences]
 button-layout='appmenu:minimize,maximize,close'
@@ -242,10 +314,10 @@ background-color='rgb(0,0,0)'
 use-background-color=true
 
 [org/gnome/evince]
-document-directory=@ms nothing
+document-directory=@ms 'file:///home/jonathan/Downloads'
 
 [org/gnome/evince/default]
-window-ratio=(1.5686274509803921, 1.2325029655990509)
+window-ratio=(3.2254000251984372, 1.4253660518191829)
 
 [org/gnome/evolution-data-server]
 migrated=true
@@ -271,15 +343,15 @@ window-size=(840, 769)
 
 [org/gnome/file-roller/listing]
 list-mode='as-folder'
-name-column-width=250
+name-column-width=493
 show-path=false
 sort-method='name'
 sort-type='ascending'
 
 [org/gnome/file-roller/ui]
 sidebar-width=200
-window-height=480
-window-width=600
+window-height=520
+window-width=1480
 
 [org/gnome/gedit/plugins]
 active-plugins=['spell', 'filebrowser', 'time', 'docinfo', 'modelines']
@@ -287,7 +359,7 @@ active-plugins=['spell', 'filebrowser', 'time', 'docinfo', 'modelines']
 [org/gnome/gedit/plugins/filebrowser]
 root='file:///'
 tree-view=true
-virtual-root='file:///home/jonathan/.brain/modules/s2p_spike_deconv'
+virtual-root='file:///home/jonathan/Downloads'
 
 [org/gnome/gedit/preferences/editor]
 auto-indent=true
@@ -306,8 +378,8 @@ side-panel-visible=false
 bottom-panel-size=140
 side-panel-active-page='GeditWindowDocumentsPanel'
 side-panel-size=200
-size=(1920, 1012)
-state=43780
+size=(1920, 1006)
+state=43908
 
 [org/gnome/login-screen]
 enable-fingerprint-authentication=true
@@ -319,8 +391,11 @@ center-new-windows=false
 workspaces-only-on-primary=true
 
 [org/gnome/mutter/keybindings]
-toggle-tiled-left=['<Alt><Super>h']
-toggle-tiled-right=['<Alt><Super>l']
+toggle-tiled-left=['<Super>h']
+toggle-tiled-right=['<Super>l']
+
+[org/gnome/nautilus/compression]
+default-compression-format='zip'
 
 [org/gnome/nautilus/preferences]
 default-folder-viewer='icon-view'
@@ -328,64 +403,88 @@ search-filter-time-type='last_modified'
 search-view='list-view'
 
 [org/gnome/nautilus/window-state]
-initial-size=(1030, 550)
+initial-size=(1166, 774)
 maximized=false
+
+[org/gnome/nm-applet/eap/242c1a91-c228-46e8-b820-41a204316004]
+ignore-ca-cert=true
+ignore-phase2-ca-cert=false
+
+[org/gnome/nm-applet/eap/697b830e-6200-4021-873b-bd97822cae10]
+ignore-ca-cert=false
+ignore-phase2-ca-cert=false
 
 [org/gnome/nm-applet/eap/c1261688-9115-4e75-a970-e0cd7bc2816b]
 ignore-ca-cert=false
 ignore-phase2-ca-cert=false
 
 [org/gnome/settings-daemon/plugins/color]
-night-light-last-coordinates=(39.006420319942407, -76.925629200000003)
+night-light-enabled=false
+night-light-last-coordinates=(49.500123780057592, 8.4595055000000006)
 
 [org/gnome/settings-daemon/plugins/media-keys]
-custom-keybindings=['/org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom0/', '/org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom1/']
+custom-keybindings=['/org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom0/', '/org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom1/', '/org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom2/']
+home=['<Super>f']
+screensaver=@as []
+www=['<Super>c']
 
 [org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom0]
 binding='<Super>t'
-command='tilix'
+command='kitty'
 name='Launch Terminal'
 
 [org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom1]
-binding='<Super>c'
+binding=''
 command='google-chrome'
 name='Launch Chrome'
+
+[org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom2]
+binding='<Super>s'
+command='gnome-control-center sound'
+name='Sound Settings'
 
 [org/gnome/settings-daemon/plugins/power]
 sleep-inactive-ac-timeout=3600
 sleep-inactive-ac-type='nothing'
 
-[org/gnome/settings-daemon/plugins/xsettings]
-antialiasing='rgba'
-hinting='slight'
-
 [org/gnome/shell]
+app-picker-layout=[{'xasy.desktop': <{'position': <0>}>, 'org.gnome.Boxes.desktop': <{'position': <1>}>, 'org.gnome.Calendar.desktop': <{'position': <2>}>, 'org.gnome.Cheese.desktop': <{'position': <3>}>, 'chromium-browser.desktop': <{'position': <4>}>, 'org.gnome.clocks.desktop': <{'position': <5>}>, 'org.gnome.Contacts.desktop': <{'position': <6>}>, 'ca.desrt.dconf-editor.desktop': <{'position': <7>}>, 'simple-scan.desktop': <{'position': <8>}>, 'eclipse.desktop': <{'position': <9>}>, 'org.gnome.Nautilus.desktop': <{'position': <10>}>, 'firefox.desktop': <{'position': <11>}>, 'google-chrome.desktop': <{'position': <12>}>, 'org.gnome.eog.desktop': <{'position': <13>}>, 'intellij-idea-ultimate_intellij-idea-ultimate.desktop': <{'position': <14>}>, 'libreoffice-calc.desktop': <{'position': <15>}>, 'libreoffice-draw.desktop': <{'position': <16>}>, 'libreoffice-impress.desktop': <{'position': <17>}>, 'libreoffice-math.desktop': <{'position': <18>}>, 'libreoffice-writer.desktop': <{'position': <19>}>, 'org.gnome.Maps.desktop': <{'position': <20>}>, 'nvim.desktop': <{'position': <21>}>}, {'org.gnome.Photos.desktop': <{'position': <0>}>, 'pynsource_pynsource.desktop': <{'position': <1>}>, 'rhythmbox.desktop': <{'position': <2>}>, 'gnome-control-center.desktop': <{'position': <3>}>, 'skypeforlinux.desktop': <{'position': <4>}>, 'org.gnome.Software.desktop': <{'position': <5>}>, 'org.gnome.gedit.desktop': <{'position': <6>}>, 'Utilities': <{'position': <7>}>, 'org.gnome.Totem.desktop': <{'position': <8>}>, 'code.desktop': <{'position': <9>}>, 'org.gnome.Weather.desktop': <{'position': <10>}>, 'Zoom.desktop': <{'position': <11>}>, 'org.inkscape.Inkscape.desktop': <{'position': <12>}>, 'lightworks.desktop': <{'position': <13>}>, 'obs-studio_obs-studio.desktop': <{'position': <14>}>, 'java-1.8.0-openjdk-1.8.0.282.b08-0.fc33.x86_64-jconsole.desktop': <{'position': <15>}>, 'java-1.8.0-openjdk-1.8.0.282.b08-0.fc33.x86_64-policytool.desktop': <{'position': <16>}>, 'java-11-openjdk-11.0.10.0.9-0.fc33.x86_64-jconsole.desktop': <{'position': <17>}>, 'zaproxy_zaproxy.desktop': <{'position': <18>}>, 'vlc.desktop': <{'position': <19>}>}]
 app-picker-view=uint32 1
-enabled-extensions=['dash-to-dock@micxgx.gmail.com']
-favorite-apps=['firefox.desktop', 'google-chrome.desktop', 'org.gnome.Nautilus.desktop', 'com.gexperts.Tilix.desktop', 'code_code.desktop', 'slack_slack.desktop']
+command-history=['ls', 'kitty']
+enabled-extensions=@as []
+favorite-apps=['firefox.desktop', 'chromium-browser.desktop', 'google-chrome.desktop', 'org.gnome.Nautilus.desktop', 'com.gexperts.Tilix.desktop', 'code.desktop', 'intellij-idea-ultimate_intellij-idea-ultimate.desktop']
+had-bluetooth-devices-setup=true
+welcome-dialog-last-shown-version='40.0'
 
 [org/gnome/shell/app-switcher]
 current-workspace-only=true
 
-[org/gnome/shell/extensions/dash-to-dock]
-customize-alphas=true
-max-alpha=0.80000000000000004
-min-alpha=0.0
-transparency-mode='DYNAMIC'
+[org/gnome/shell/extensions/EasyScreenCast]
+active-custom-gsp=false
+file-container=2
+file-resolution-height=480
+file-resolution-width=640
+pipeline='vp9enc min_quantizer=0 max_quantizer=5 cpu-used=3 deadline=1000000 threads=%T ! queue max-size-buffers=0 max-size-time=0 max-size-bytes=0 ! webmmux'
+quality-webcam=''
+show-area-rec=true
+
+[org/gnome/shell/keybindings]
+toggle-overview=@as []
 
 [org/gnome/shell/weather]
 automatic-location=true
 locations=[<(uint32 2, <('College Park, Maryland, United States of America', '', false, [(0.68034096632020791, -1.3428025511448538)], [(0.67884776733195662, -1.344538230471414)])>)>, <(uint32 2, <('Washington', 'KDCA', false, [(0.67803131976116615, -1.3444998506811625)], [(0.67803131976116615, -1.3444998506811625)])>)>, <(uint32 2, <('Paderborn', 'EDLP', true, [(0.90088078805550398, 0.15038920969794223)], [(0.9026261173074982, 0.15300720357593373)])>)>]
 
 [org/gnome/shell/world-clocks]
-locations=[<(uint32 2, <('Berlin', 'EDDT', true, [(0.91746141594945008, 0.23241968454167572)], [(0.91658875132345297, 0.23387411976724018)])>)>]
+locations=@av []
 
 [org/gnome/software]
-check-timestamp=int64 1597142404
+check-timestamp=int64 1620200104
 first-run=false
-install-timestamp=int64 1596760080
-online-updates-timestamp=int64 1597142408
-upgrade-notification-timestamp=int64 1588242979
+install-timestamp=int64 1619602607
+online-updates-timestamp=int64 1619601850
+update-notification-timestamp=int64 1620200107
+upgrade-notification-timestamp=int64 1619593238
 
 [org/gnome/system/location]
 enabled=true
@@ -405,17 +504,20 @@ use-system-font=false
 use-theme-colors=false
 use-transparent-background=false
 
+[org/gnome/tweaks]
+show-extensions-notice=false
+
 [org/gtk/settings/color-chooser]
-custom-colors=[(0.71000000000000008, 0.0, 0.0, 1.0), (0.66333333333333333, 0.0, 0.0, 1.0), (0.97000000000000008, 0.012933333333333311, 0.012933333333333311, 1.0), (0.37666666666666671, 0.14062222222222223, 0.14062222222222223, 1.0), (0.80392156862745101, 0.0, 0.0, 1.0)]
-selected-color=(true, 0.71000000000000008, 0.0, 0.0, 1.0)
+custom-colors=[(0.062745098039215685, 0.062745098039215685, 0.062745098039215685, 1.0), (0.71000000000000008, 0.0, 0.0, 1.0), (0.66333333333333333, 0.0, 0.0, 1.0), (0.97000000000000008, 0.012933333333333311, 0.012933333333333311, 1.0), (0.37666666666666671, 0.14062222222222223, 0.14062222222222223, 1.0), (0.80392156862745101, 0.0, 0.0, 1.0)]
+selected-color=(true, 1.0, 1.0, 1.0, 1.0)
 
 [org/gtk/settings/file-chooser]
 date-format='regular'
 location-mode='path-bar'
-show-hidden=true
+show-hidden=false
 show-size-column=true
 show-type-column=true
-sidebar-width=158
+sidebar-width=175
 sort-column='modified'
 sort-directories-first=false
 sort-order='descending'
