--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -6,10 +6,11 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-# font_family      monospace
-# bold_font        auto
-# italic_font      auto
-# bold_italic_font auto
+font_family      Cascadia Code
+bold_font        auto
+italic_font      auto
+bold_italic_font auto
+
 
 #: You can specify different fonts for the bold/italic/bold-italic
 #: variants. To get a full list of supported fonts use the `kitty
@@ -23,7 +24,7 @@
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
-font_size 12.0
+font_size 14.0
 
 #: Font size (in pts)
 
@@ -69,7 +70,7 @@ font_size 12.0
 
 #:     symbol_map codepoints Font Family Name
 
-# disable_ligatures never
+disable_ligatures never
 
 #: Choose how you want to handle multi-character ligatures. The
 #: default is to always render them.  You can tell kitty to not render
@@ -377,7 +378,7 @@ touch_scroll_multiplier 4.0
 
 #: Terminal bell {{{
 
-# enable_audio_bell yes
+enable_audio_bell no
 
 #: Enable/disable the audio bell. Useful in environments that require
 #: silence.
@@ -406,9 +407,9 @@ touch_scroll_multiplier 4.0
 
 #: Window layout {{{
 
-# remember_window_size  yes
-# initial_window_width  640
-# initial_window_height 400
+remember_window_size  no
+initial_window_width  900
+initial_window_height 540
 
 #: If enabled, the window size will be remembered so that new
 #: instances of kitty will have the same size as the previous
@@ -499,7 +500,7 @@ touch_scroll_multiplier 4.0
 #: Fade the text in inactive windows by the specified amount (a number
 #: between zero and one, with zero being fully faded).
 
-# hide_window_decorations no
+hide_window_decorations yes
 
 #: Hide the window decorations (title-bar and window borders) with
 #: yes. On macOS, titlebar-only can be used to only hide the titlebar.
@@ -635,10 +636,44 @@ touch_scroll_multiplier 4.0
 
 #: Color scheme {{{
 
-# foreground #dddddd
-# background #000000
+cursor                  #928374
 
-#: The foreground and background colors
+background  #1d2021
+foreground  #fbf1c7
+selection_foreground    #928374
+selection_background    #ebdbb2
+
+# black
+color0      		#1d2021
+color8                  #7c6f64
+
+# red
+color1                  #cc241d
+color9                  #fb4934
+
+#: green
+color2                  #98971a
+color10                 #b8bb26
+
+# yellow
+color3                  #d79921
+color11                 #fabd2f
+
+# blue
+color4                  #458588
+color12                 #83a598
+
+# purple
+color5                  #b16286
+color13                 #d3869b
+
+# aqua
+color6                  #689d6a
+color14                 #8ec07c
+
+# white
+color7                  #a89984
+color15                 #fbf1c7
 
 # background_opacity 1.0
 
@@ -702,49 +737,7 @@ touch_scroll_multiplier 4.0
 #: The background for text selected with the mouse.
 
 
-#: The 256 terminal colors. There are 8 basic colors, each color has a
-#: dull and bright version, for the first 16 colors. You can set the
-#: remaining 240 colors as color16 to color255.
 
-# color0 #000000
-# color8 #767676
-
-#: black
-
-# color1 #cc0403
-# color9 #f2201f
-
-#: red
-
-# color2  #19cb00
-# color10 #23fd00
-
-#: green
-
-# color3  #cecb00
-# color11 #fffd00
-
-#: yellow
-
-# color4  #0d73cc
-# color12 #1a8fff
-
-#: blue
-
-# color5  #cb1ed1
-# color13 #fd28ff
-
-#: magenta
-
-# color6  #0dcdcd
-# color14 #14ffff
-
-#: cyan
-
-# color7  #dddddd
-# color15 #ffffff
-
-#: white
 
 # mark1_foreground black
 
