--- a/.dconf.ini
+++ b/.dconf.ini
@@ -1,6 +1,6 @@
 [ca/desrt/dconf-editor]
-saved-pathbar-path='/org/gnome/desktop/wm/keybindings/maximize'
-saved-view='/org/gnome/desktop/wm/keybindings/'
+saved-pathbar-path='terminal'
+saved-view='/org/gnome/terminal/'
 show-warning=false
 window-height=853
 window-is-maximized=false
@@ -182,7 +182,7 @@ show-battery-percentage=true
 toolkit-accessibility=false
 
 [org/gnome/desktop/notifications]
-application-children=['org-gnome-software', 'org-gnome-terminal', 'google-chrome', 'org-freedesktop-problems-applet', 'gnome-power-panel', 'com-gexperts-tilix', 'slack-slack', 'org-gnome-gedit', 'gnome-network-panel', 'org-gnome-baobab', 'code', 'libreoffice-startcenter', 'org-gnome-nautilus', 'gnome-datetime-panel', 'skypeforlinux', 'chromium-browser', 'gnome-control-center', 'intellij-idea-ultimate-intellij-idea-ultimate', 'org-gnome-evince', 'libreoffice-impress', 'com-github-amikha1lov-recapp', 'libreoffice-calc', 'org-gnome-fileroller', 'wireshark']
+application-children=['org-gnome-software', 'org-gnome-terminal', 'google-chrome', 'org-freedesktop-problems-applet', 'gnome-power-panel', 'com-gexperts-tilix', 'slack-slack', 'org-gnome-gedit', 'gnome-network-panel', 'org-gnome-baobab', 'code', 'libreoffice-startcenter', 'org-gnome-nautilus', 'gnome-datetime-panel', 'skypeforlinux', 'chromium-browser', 'gnome-control-center', 'intellij-idea-ultimate-intellij-idea-ultimate', 'org-gnome-evince', 'libreoffice-impress', 'com-github-amikha1lov-recapp', 'libreoffice-calc', 'org-gnome-fileroller', 'wireshark', 'libreoffice-writer']
 show-banners=true
 
 [org/gnome/desktop/notifications/application/chromium-browser]
@@ -223,6 +223,9 @@ application-id='libreoffice-impress.desktop'
 
 [org/gnome/desktop/notifications/application/libreoffice-startcenter]
 application-id='libreoffice-startcenter.desktop'
+
+[org/gnome/desktop/notifications/application/libreoffice-writer]
+application-id='libreoffice-writer.desktop'
 
 [org/gnome/desktop/notifications/application/org-freedesktop-problems-applet]
 application-id='org.freedesktop.problems.applet.desktop'
@@ -288,19 +291,19 @@ begin-resize=['<Super>r']
 close=['<Super>q']
 cycle-windows=['<Alt>Tab']
 cycle-windows-backward=['<Shift><Alt>Tab']
-maximize=['<Super>k']
+maximize=['<Alt><Super>k']
 minimize=@as []
-move-to-workspace-left=['<Alt><Super>comma']
-move-to-workspace-right=['<Alt><Super>period']
+move-to-workspace-left=['<Alt><Super>bracketleft']
+move-to-workspace-right=['<Alt><Super>bracketright']
 switch-applications=@as []
 switch-applications-backward=@as []
 switch-to-workspace-down=['<Super>j']
-switch-to-workspace-left=['<Super>comma']
-switch-to-workspace-right=['<Super>period']
+switch-to-workspace-left=['<Super>bracketleft']
+switch-to-workspace-right=['<Super>bracketright']
 switch-to-workspace-up=['<Super>k']
 switch-windows=@as []
 switch-windows-backward=@as []
-unmaximize=['<Super>j']
+unmaximize=['<Alt><Super>j']
 
 [org/gnome/desktop/wm/preferences]
 button-layout='appmenu:minimize,maximize,close'
@@ -359,7 +362,7 @@ active-plugins=['spell', 'filebrowser', 'time', 'docinfo', 'modelines']
 [org/gnome/gedit/plugins/filebrowser]
 root='file:///'
 tree-view=true
-virtual-root='file:///home/jonathan/Downloads'
+virtual-root='file:///home/jonathan/.cache/.fr-xW0ZsT/extension/themes'
 
 [org/gnome/gedit/preferences/editor]
 auto-indent=true
@@ -391,8 +394,8 @@ center-new-windows=false
 workspaces-only-on-primary=true
 
 [org/gnome/mutter/keybindings]
-toggle-tiled-left=['<Super>h']
-toggle-tiled-right=['<Super>l']
+toggle-tiled-left=['<Alt><Super>h']
+toggle-tiled-right=['<Alt><Super>l']
 
 [org/gnome/nautilus/compression]
 default-compression-format='zip'
@@ -420,12 +423,12 @@ ignore-phase2-ca-cert=false
 
 [org/gnome/settings-daemon/plugins/color]
 night-light-enabled=false
-night-light-last-coordinates=(49.500123780057592, 8.4595055000000006)
+night-light-last-coordinates=(49.500153080057594, 8.4594839000000004)
 
 [org/gnome/settings-daemon/plugins/media-keys]
 custom-keybindings=['/org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom0/', '/org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom1/', '/org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom2/']
 home=['<Super>f']
-screensaver=@as []
+screensaver=['<Super>l']
 www=['<Super>c']
 
 [org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom0]
@@ -479,11 +482,11 @@ locations=[<(uint32 2, <('College Park, Maryland, United States of America', '',
 locations=@av []
 
 [org/gnome/software]
-check-timestamp=int64 1620200104
+check-timestamp=int64 1620447265
 first-run=false
 install-timestamp=int64 1619602607
 online-updates-timestamp=int64 1619601850
-update-notification-timestamp=int64 1620200107
+update-notification-timestamp=int64 1620447268
 upgrade-notification-timestamp=int64 1619593238
 
 [org/gnome/system/location]
@@ -522,5 +525,5 @@ sort-column='modified'
 sort-directories-first=false
 sort-order='descending'
 type-format='category'
-window-position=(26, 23)
+window-position=(2265, 622)
 window-size=(1231, 902)
