change kitty colorscheme

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -23,36 +23,47 @@ initial_window_height 540
 
 hide_window_decorations yes
 
-### COLOR SCHEME GRUVBOX DARK HARD ###
-cursor                  #928374
-background  #1d2021
-foreground  #fbf1c7
-selection_foreground    #928374
-selection_background    #ebdbb2
-# black
-color0             		#1d2021
-color8                  #7c6f64
-# red
-color1                  #cc241d
-color9                  #fb4934
-#: green
-color2                  #98971a
-color10                 #b8bb26
-# yellow
-color3                  #d79921
-color11                 #fabd2f
-# blue
-color4                  #458588
-color12                 #83a598
-# purple
-color5                  #b16286
-color13                 #d3869b
-# aqua
-color6                  #689d6a
-color14                 #8ec07c
-# white
-color7                  #a89984
-color15                 #fbf1c7
+
+### srcery colorscheme
+### https://github.com/srcery-colors/srcery-terminal/
+
+foreground           #fce8c3
+background           #1c1b19
+cursor               #fbb829
+selection_foreground #1c1b19
+selection_background #fce8c3
+
+# Black
+color0               #1c1b19
+color8               #918175
+
+# Red
+color1               #ef2f27
+color9               #f75341
+
+# Green
+color2               #519f50
+color10              #98bc37
+
+# Yellow
+color3               #fbb829
+color11              #fed06e
+
+# Blue
+color4               #2c78bf
+color12              #68a8e4
+
+# Magenta
+color5               #e02c6d
+color13              #ff5c8f
+
+# Cyan
+color6               #0aaeb3
+color14              #2be4d0
+
+# White
+color7               #baa67f
+color15              #fce8c3
 
 background_opacity 1.0
 
@@ -81,21 +92,20 @@ map kitty_mod+c copy_to_clipboard
 map kitty_mod+v paste_from_clipboard
 
 
-map kitty_mod+k         scroll_line_up
-map kitty_mod+j         scroll_line_down
 map kitty_mod+h         show_scrollback
 
 
 map kitty_mod+enter     launch --cwd=current
 map kitty_mod+w close_window
-map kitty_mod+] next_window
-map kitty_mod+[ previous_window
+map kitty_mod+k previous_window
+map kitty_mod+j next_window
 map kitty_mod+f move_window_forward
 map kitty_mod+b move_window_backward
 map kitty_mod+r start_resizing_window
 
 
-map kitty_mod+n next_tab
+map kitty_mod+] next_tab
+map kitty_mod+[ previous_tab
 map kitty_mod+t new_tab
 map kitty_mod+q close_tab
 
