--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,8 +1,8 @@
 bind r source-file ~/.tmux.conf
 set -sg escape-time 0
 set -g mouse on
-set-option -g default-shell "/bin/bash"
-
+set -g prefix C-Space
+set -g default-shell "/bin/bash"
 
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
 
@@ -33,10 +33,6 @@ bind -T copy-mode-vi M-h resize-pane -L 1
 bind -T copy-mode-vi M-j resize-pane -D 1
 bind -T copy-mode-vi M-k resize-pane -U 1
 bind -T copy-mode-vi M-l resize-pane -R 1
-
-bind -n 'C-[' previous-window
-bind -n 'C-]' next-window
-
 
 # plugins
 set -g @plugin 'srcery-colors/srcery-tmux'
