replace tmux plugins and create copy mode bidings

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,9 +2,16 @@ bind r source-file ~/.tmux.conf
 set -sg escape-time 0
 set -g mouse on
 set -g prefix C-Space
-set -g default-shell "/bin/bash"
+set -g default-shell "/usr/bin/fish"
+setw -g mode-keys vi
 
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
+
+# copy mode
+bind p paste-buffer
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi y send-keys -X copy-selection
+bind-key -T copy-mode-vi r send-keys -X rectangle-toggle
 
 # pane navigation
 bind -n 'C-h' if-shell "$is_vim" 'send-keys C-h' { if -F '#{pane_at_left}' '' 'select-pane -L' }
@@ -34,13 +41,7 @@ bind -T copy-mode-vi M-j resize-pane -D 1
 bind -T copy-mode-vi M-k resize-pane -U 1
 bind -T copy-mode-vi M-l resize-pane -R 1
 
-# plugins
-set -g @plugin 'srcery-colors/srcery-tmux'
-set -g @srcery_tmux_patched_font '1'
-
-set -g @plugin 'tmux-plugins/tmux-prefix-highlight' # has to be loaded after theme
-
-# install (if not present) and run plugin manager
-if "test ! -d ~/.tmux/plugins/tpm" \
-	   "run 'git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm && ~/.tmux/plugins/tpm/bin/install_plugins'"
-run -b '~/.tmux/plugins/tpm/tpm'
+# statusline
+set -g status-style bg=default
+set -g status-justify centre
+set -g status-right '#{?client_prefix,#[reverse]^B#[noreverse],  }'
