--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,7 +2,7 @@ bind r source-file ~/.tmux.conf
 set -sg escape-time 0
 set -g mouse on
 set -g prefix C-Space
-set -g default-shell "/usr/bin/fish"
+set -g default-shell "/bin/bash"
 set -g default-terminal "screen.xterm-256color"
 setw -g mode-keys vi
 
