--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,7 +1,9 @@
-font_family      Cascadia Code
-bold_font        auto
-italic_font      auto
-bold_italic_font auto
+font_family      Caskaydia Cove SemiLight Nerd Font Complete Mono
+bold_font        Caskaydia Cove Bold Nerd Font Complete Mono
+italic_font      Cascadia Code SemiLight Italic
+bold_italic_font Cascadia Code Bold Italic
+font_features    CascadiaCode-SemiLightItalic +ss01
+font_features    CascadiaCode-BoldItalic +ss01
 
 font_size 14.0
 
@@ -83,31 +85,52 @@ clipboard_control write-clipboard write-primary
 wayland_titlebar_color background
 linux_display_server auto
 
+enabled_layouts splits
+
+
 
 clear_all_shortcuts yes
 
+
 kitty_mod shift+alt
+
+map ctrl+space>e edit_config_file
 
 map kitty_mod+c copy_to_clipboard
 map kitty_mod+v paste_from_clipboard
+map ctrl+space>y copy_to_clipboard
+map ctrl+space>p paste_from_clipboard
 
 
 map kitty_mod+h         show_scrollback
 
 
+# nvim and windowing setup
+allow_remote_control yes
+listen_on unix:@jonathanskitty
+
 map kitty_mod+enter     launch --cwd=current
-map kitty_mod+w close_window
-map kitty_mod+k previous_window
-map kitty_mod+j next_window
-map kitty_mod+f move_window_forward
-map kitty_mod+b move_window_backward
+map ctrl+space>w close_window
+map ctrl+space>- launch --location=hsplit --cwd=current
+map ctrl+space>/ launch --location=vsplit --cwd=current
+map ctrl+h kitten pass_keys.py neighboring_window left ctrl+h
+map ctrl+j kitten pass_keys.py neighboring_window bottom ctrl+j
+map ctrl+k kitten pass_keys.py neighboring_window top ctrl+k
+map ctrl+l kitten pass_keys.py neighboring_window right ctrl+l
+map alt+h kitten pass_keys.py resize_window narrower alt+h
+map alt+j kitten pass_keys.py resize_window shorter alt+j
+map alt+k kitten pass_keys.py resize_window taller alt+k
+map alt+l kitten pass_keys.py resize_window wider alt+l
 map kitty_mod+r start_resizing_window
 
 
-map kitty_mod+] next_tab
-map kitty_mod+[ previous_tab
-map kitty_mod+t new_tab
-map kitty_mod+q close_tab
+map ctrl+space>n next_tab
+map ctrl+space>p previous_tab
+map kitty_mod+n next_tab
+map kitty_mod+p previous_tab
+map ctrl+space>c new_tab
+map ctrl+space>t close_tab
+map ctrl+space>, set_tab_title
 
 map kitty_mod+l next_layout
 
