kitty: make links clickable

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -146,6 +146,13 @@ map kitty_mod+p>h kitten hints --type hash --program -
 map kitty_mod+p>n kitten hints --type linenum # TODO open in VSCode
 map kitty_mod+p>y kitten hints --type hyperlink
 
++# click url or move cursor
++mouse_map left click ungrabbed mouse_handle_click selection link prompt
++show_hyperlink_targets yes
++
++# open url with keyboard
++map ctrl+space>o open_url_with_hints
+
 map kitty_mod+u      kitten unicode_input
 
 map kitty_mod+backspace clear_terminal scroll active
